--- a/skuska/style.css
+++ b/skuska/style.css
@@ -1,7 +1,19 @@
-body{
-	background-color: white;
-	text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
+
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    
+}
+
+
 
 .box{
     background-color: cornflowerblue;
