--- a/skuska/style.css
+++ b/skuska/style.css
@@ -9,7 +9,8 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background: linear-gradient(-30deg, #03a9f4 0%, #3a78b7 50%, #262626 50%);
+    min-height: 200vh;
+    background: linear-gradient(-30deg, #03a9f4 0%, #3a78b7 50%, #262626 50%, #607d8b 100%);
+    /*filter: hue-rotate(120deg);*/
 }
 
