--- a/skuska/style.css
+++ b/skuska/style.css
@@ -9,8 +9,17 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 200vh;
+    min-height: 100vh;
     background: linear-gradient(-30deg, #03a9f4 0%, #3a78b7 50%, #262626 50%, #607d8b 100%);
     /*filter: hue-rotate(120deg);*/
 }
 
+.box{
+    position: relative;
+    padding: 50px;
+    width: 360px;
+    height: 480px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
