--- a/skuska/style.css
+++ b/skuska/style.css
@@ -22,4 +22,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 6px;
+    box-shadow: 0 5px 35px rgba(0, 0, 0, 0.2);
 }
