--- a/skuska/style.css
+++ b/skuska/style.css
@@ -26,3 +26,14 @@ section{
     border-radius: 6px;
     box-shadow: 0 5px 35px rgba(0, 0, 0, 0.2);
 }
+
+.box::after{
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    border-radius: 5px;
+    pointer-events: none;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.1) 0%, transparent 50%, transparent 50%, gba(255, 255, 255, 0.3) 100%);
+}
