--- a/skuska/style.css
+++ b/skuska/style.css
@@ -35,5 +35,23 @@ section{
     right: 5px;
     border-radius: 5px;
     pointer-events: none;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.1) 0%, transparent 50%, transparent 50%, gba(255, 255, 255, 0.3) 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.1) 0%, transparent 50%, transparent 85%, gba(255, 255, 255, 0.3) 100%);
+
+}
+
+.box .form{
+    position: relative;
+    width: 100%;
+}
+.box .form h2{
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+}
+
+.box .form .inputBox{
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
 }
