--- a/skuska/style.css
+++ b/skuska/style.css
@@ -55,3 +55,16 @@ section{
     width: 100%;
     margin-bottom: 20px;
 }
+
+.box .form .inputBox input{
+    width: 100%;
+    outline: none;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    background: transparent;
+    padding: 8px 10px;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.2);
+}
