--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*
     Style prevzaty z: https://youtu.be/vGm81GL_9rk
 */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
 *{
     margin: 0;
