--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ section{
 }
 .box .form h2{
     color: #fff;
-    font-weight: 1000;
+    font-weight: bolder;
     letter-spacing: 2px;
     margin-bottom: 20px;
 }
