--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ section{
     color: #111;
     max-width: 100px;
     padding: 8px 10px;
-    margin-left: auto;
+    margin-left: 50%;
     box-shadow: none;
     font-weight: 500;
     letter-spacing: 1px;
