--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ section{
 .box::after{
     content: '';
     position: absolute;
+    align-items: center;
     top: 5px;
     left: 5px;
     right: 5px;
@@ -101,7 +102,7 @@ section{
     font-weight: 500;
     letter-spacing: 1px;
     cursor: pointer;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .remember{
