--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ section{
     height: 600px;
     display: flex;
     justify-content: center;
-    align-items: center;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 6px;
     box-shadow: 0 5px 35px rgba(0, 0, 0, 0.2);
@@ -103,6 +102,7 @@ section{
     letter-spacing: 1px;
     cursor: pointer;
     margin-bottom: 5px;
+    justify-content: center;
 }
 
 .remember{
