--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ section{
     font-weight: bolder;
     letter-spacing: 2px;
     margin-bottom: 20px;
-    align-items: center;
+    justify-content: center;
 }
 
 .box .form .inputBox{
