--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ section{
     font-weight: bolder;
     letter-spacing: 2px;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .box .form .inputBox{
