--- a/style.css
+++ b/style.css
@@ -65,8 +65,7 @@ section{
     font-weight: bolder;
     letter-spacing: 2px;
     margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 30%;
 }
 
 .box .form .inputBox{
